--- a/css/index.css
+++ b/css/index.css
@@ -1,1 +1,6 @@
-.version.index{color:#00000A;background-color:#417465;}#page{z-index:1;width:1920px;min-height:1018px;background-image:none;border-width:0px;border-color:#000000;background-color:transparent;padding-bottom:62px;margin-left:auto;margin-right:auto;}#u97{z-index:2;width:2120px;background-color:transparent;position:relative;margin-right:-10000px;left:-100px;}#u97_img{margin-top:-66px;margin-bottom:-66px;}#u110-4{z-index:4;width:1148px;min-height:559px;background-color:transparent;font-size:250px;line-height:300px;position:relative;margin-right:-10000px;margin-top:282px;left:415px;}.css_verticalspacer .verticalspacer{height:calc(100vh - 1121px);}#muse_css_mq,.html{background-color:#FFFFFF;}body{position:relative;min-width:1920px;}
+.version.index{color:#00000A;background-color:#417465;}#page{(max-width: 1024px)
+body, html {
+/* height: 100%!important; */
+overflow: auto!important;
+max-height: 100% !important;
+}}body{position:relative;min-width:1920px;}
