--- a/style.css
+++ b/style.css
@@ -12,6 +12,10 @@ h1, h2, h3 {
 	margin: 0;
 }
 
+canvas {
+	backgroun: #eee; 
+}
+
 #container {
 	background-color: white;
 	width: 800px;
@@ -53,6 +57,7 @@ h1, h2, h3 {
 	float: right;
 	
 }
+
 
 
 #footer {
