--- a/style.css
+++ b/style.css
@@ -67,3 +67,11 @@ canvas {
 	color: white;
 	text-align: right;
 }
+
+#test {
+	clear: both;
+	padding: 10px;
+	background-color: #999999;
+	color: white;
+	text-align: right;
+}
