--- a/style.css
+++ b/style.css
@@ -71,7 +71,8 @@ canvas {
 #test {
 	clear: both;
 	padding: 10px;
-	background-color: #999999;
+	background-color: #ffffff;
 	color: white;
 	text-align: right;
+	font-family: sans-serif;
 }
