--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 body {
 	background-color: #EEEEEE;
 	font-family: Helvetica, Arial, sans-serif;
+	background-image: url(pics/duene.jpg);
+    background-attachment: fixed;
+    background-size: 100% 100%;
 }
 
 a {
@@ -75,4 +78,8 @@ canvas {
 	color: white;
 	text-align: right;
 	font-family: sans-serif;
+}
+
+table, th, td {
+  border: 1px solid black;
 }
