--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
 	background-color: #EEEEEE;
 	font-family: Helvetica, Arial, sans-serif;
-	background-image: url(pics/duene.jpg);
+	background-image: url(pics/pillars.jpg);
 	background-attachment: fixed;
 	background-size: 100% 100%;
 }
@@ -31,7 +31,8 @@ canvas {
 	background-color: #66CCFF;
 	color: white;
 	text-align: center;
-	padding: 10px;
+	padding: 5px;
+	margin-top: 10px;
 }
 
 
@@ -41,7 +42,8 @@ canvas {
 
 #nav ul {
 	list-style-type: none;
-	padding: 0;
+	padding: 4px;
+	margin-top: 60px;
 }
 
 #nav {
